http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "com_github_sdl",
    build_file = "@//third_party:BUILD",
    strip_prefix = "SDL3-3.2.0",
    url = "https://github.com/libsdl-org/SDL/releases/download/release-3.2.0/SDL3-3.2.0.tar.gz",
)

bazel_dep(
    name = "rules_foreign_cc",
    version = "0.15.0",
)

bazel_dep(name = "platforms", version = "0.0.11")
